--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,507 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Inria+Serif:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap');
+
+/*Basic styles*/
+* {
+  margin: 0;
+  padding: 0;
+
+  /*color: white;*/
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.align-center {
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+}
+
+body {
+  background-image: url("https://res.cloudinary.com/muhammederdem/image/upload/v1536405234/starwars/death_star.jpg") ;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.color-white {
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.textCenter {
+  text-align: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+.mt-auto {
+  margin-top: auto;
+}
+
+.mb-auto {
+  margin-bottom: auto;
+}
+
+.d-flex {
+  display: flex;
+}
+
+.justify-content-between {
+  justify-content: space-between;
+}
+
+.wrap-content {
+  flex-wrap: wrap;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.justify-colm {
+  flex-direction: column;
+}
+
+.mt-auto {
+  margin-top: auto;
+}
+
+.mb-32px {
+  margin-bottom: 32px;
+}
+
+.mt-32px {
+  margin-top: 32px;
+}
+
+.css-ahj2mt-MuiTypography-root {
+  margin-top: 32px !important;
+}
+
+.mr-32px {
+  margin-right: 32px;
+}
+
+.p-absolute {
+  position: absolute;
+}
+
+.ml-32px {
+  margin-left: 32px;
+}
+
+.padding-30px {
+  padding: 30px;
+}
+
+.mt-64px {
+  margin-top: 64px;
+}
+
+.mt-104px {
+  margin-top: 104px;
+}
+
+.padding-64px {
+  padding: 64px;
+}
+
+
+
+
+/*Type settings*/
+.infrormation {
+  font-family: 'Inria Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+
+  text-transform: uppercase;
+
+  color: #868991;
+
+  padding: 16px 24px;
+  border: 2px solid #CC3743;
+  border-radius: 100px;
+
+}
+
+.SubHead {
+  font-family: 'Inria Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 43px;
+
+  color: #FFFFFF;
+}
+
+.navigation-link:hover {
+  background: rgba(255, 255, 255, 0.16);
+  transition: 0.5s;
+  border-radius: 100px;
+}
+
+.navigation-link {
+  font-family: 'Inria Sans';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 36px;
+  line-height: 43px;
+
+  padding: 4px 24px;
+  color: #FFFFFF;
+
+}
+
+.css-bdhsul-MuiTypography-root-MuiDialogTitle-root {
+  font-family: 'Inria Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px !important;
+  line-height: 67px;
+
+  color: #FFFFFF !important;
+}
+
+.Label-information {
+  display: flex;
+  align-items: center;
+
+  font-family: "Roboto" !important;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 24px;
+  line-height: 29px;
+
+  text-transform: uppercase;
+
+  color: #FFFFFF;
+}
+
+h2 {
+  font-family: 'Inria Sans';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 40px;
+  line-height: 67px;
+
+  color: #FFFFFF;
+}
+
+
+
+
+/*Size, Wrappers settings*/
+
+.TestShape {
+  width: 56px;
+  height: 56px;
+  background: url("img/Close.svg") no-repeat;
+  background-size: cover;
+
+
+  position: absolute;
+  top: 40px;
+  right: 40px;
+
+  cursor: pointer;
+}
+.css-1t1j96h-MuiPaper-root-MuiDialog-paper {
+  background-color: unset !important;
+  color: rgba(0, 0, 0, 0.87);
+  -webkit-transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  transition: box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
+  border-radius: 32px !important;
+  border: 0px !important;
+  box-shadow: 0px 11px 15px -7px rgba(0,0,0,0.2),0px 24px 38px 3px rgba(0,0,0,0.14),0px 9px 46px 8px rgba(0,0,0,0.12);
+  margin: 32px 32px 32px auto !important;
+  position: relative;
+  overflow-y: auto;
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  justify-content: end !important;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  max-height: calc(100% - 64px);
+  max-width: unset !important;
+
+}
+.shape {
+  background: white;
+  text-align: left;
+
+  background: url(https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1536405223/starwars/item-4-bg.webp);
+  filter: drop-shadow(0px 415px 166px rgba(0, 0, 0, 0.04)) drop-shadow(0px 233px 140px rgba(0, 0, 0, 0.12)) drop-shadow(0px 104px 104px rgba(0, 0, 0, 0.2)) drop-shadow(0px 26px 57px rgba(0, 0, 0, 0.24)) drop-shadow(0px 0px 0px rgba(0, 0, 0, 0.24));
+
+  width: 800px;
+  height: 560px;
+
+  overflow: hidden;
+}
+.css-ypiqx9-MuiDialogContent-root {
+  -webkit-flex: 1 1 auto;
+  -ms-flex: 1 1 auto;
+  flex: 1 1 auto;
+  height: 100% !important;
+  -webkit-overflow-scrolling: touch;
+  overflow-y: auto;
+  padding: 16px 64px 64px !important;
+  color: #FFFFFF !important;
+}
+.css-bdhsul-MuiTypography-root-MuiDialogTitle-root {
+  margin: 0;
+  font-family: "Roboto","Helvetica","Arial",sans-serif;
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 1.6;
+  letter-spacing: 0.0075em;
+  padding: 64px 64px 0 64px !important;
+  -webkit-flex: 0 0 auto;
+  -ms-flex: 0 0 auto;
+  flex: 0 0 auto;
+  color: #FFFFFF !important;
+}
+
+.informationContainer {
+  position: relative;
+}
+
+.VehiclesContainer {
+  bottom: 32px;
+}
+
+.vehicleBtn {
+  background: #CC2F42;
+  box-shadow: 0px 50px 20px rgba(204, 47, 66, 0.04), 0px 28px 17px rgba(204, 47, 66, 0.12), 0px 13px 13px rgba(204, 47, 66, 0.2), 0px 3px 7px rgba(204, 47, 66, 0.24), 0px 0px 0px rgba(204, 47, 66, 0.24);
+  border-radius: 100px;
+  padding: 16px 32px;
+
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 12px;
+  line-height: 24px;
+  text-transform: uppercase;
+
+  color: #FFFFFF;
+}
+
+.cardWrapper {
+  position: relative;
+  width: fit-content;
+  height: fit-content;
+}
+
+.Logo {
+  padding: 32px;
+  background: #CD3144;
+
+  margin-left: 40px;
+  margin-top: 30px;
+
+  width: 344px;
+  height: 600px;
+}
+
+.css-bshv44-MuiButtonBase-root-MuiListItem-root {
+  width: fit-content !important;
+}
+
+.SearchInput {
+  background: white;
+  border-radius: 8px;
+  color: white;
+}
+
+.css-m9glnp-MuiPaper-root-MuiDialog-paper {
+  background: url("img/BG_Image.png");
+}
+
+.Wrapper {
+  background: white;
+  margin: auto;
+  width: fit-content;
+
+  background: linear-gradient(0deg, rgba(16, 34, 48, 0.4), rgba(16, 34, 48, 0.4)), #242528;
+  box-shadow: 0px 605px 170px rgba(0, 0, 0, 0.01), 0px 387px 155px rgba(0, 0, 0, 0.05), 0px 218px 131px rgba(0, 0, 0, 0.16), 0px 97px 97px rgba(0, 0, 0, 0.27), 0px 24px 53px rgba(0, 0, 0, 0.31), 0px 0px 0px rgba(0, 0, 0, 0.32);
+  border-radius: 40px;
+
+  width: 700px;
+  height: 760px;
+}
+
+.css-ahj2mt-MuiTypography-root {
+  width: fit-content;
+}
+
+.CharacterContainer {
+  position: relative;
+  z-index: 2;
+}
+
+.Logo4 {
+  width: 80px;
+  height: 80px;
+}
+
+.FirstWrapper {
+  width: fit-content;
+  height: 100vh;
+  overflow: hidden;
+
+  background: linear-gradient(0deg, rgba(16, 34, 48, 0.4), rgba(16, 34, 48, 0.4)), #242528;
+  box-shadow: 0px 605px 170px rgba(0, 0, 0, 0.01), 0px 387px 155px rgba(0, 0, 0, 0.05), 0px 218px 131px rgba(0, 0, 0, 0.16), 0px 97px 97px rgba(0, 0, 0, 0.27), 0px 24px 53px rgba(0, 0, 0, 0.31), 0px 0px 0px rgba(0, 0, 0, 0.32);
+  padding-top: 32px;
+  padding-bottom: 32px;
+}
+
+.FirstImage {
+  position: absolute;
+  top: 0;
+  right: 200px;
+
+  left: 80px;
+  margin-top: 120px;
+  margin-left: 100px;
+
+  width: 300px;
+  height: 300px;
+  animation-name: animate-element;
+  animation-duration: 3s;
+  animation-iteration-count: infinite;
+}
+.WelcomeContainer2 {
+  position: absolute;
+  right: 50%;
+  top: 50%;
+
+  margin-right: -25%;
+  margin-top: -10%;
+}
+
+
+
+
+/*Pseudo-elements*/
+.Label-information2:before {
+  content: "";
+  display: inline-block;
+  width: 72px;
+  height: 72px;
+  margin-right: 16px;
+  background-image: url("img/Icon.png");
+
+  animation-name: animate-element4;
+  animation-duration: 1.5s;
+  animation-iteration-count: unset;
+}
+
+.CharacterContainer:before {
+  content: "";
+  background-image: url("img/LogoContainerBg.png");
+  display: inline-block;
+
+  width: 600px;
+  height: 800px;
+
+  position: absolute;
+  bottom: 20%;
+  right: 50%;
+
+  margin-bottom: 150px;
+  margin-right: -400px;
+  border-radius: 40px;
+  z-index: 1;
+
+  animation-name: animate-element3;
+  animation-duration: 1.5s;
+  animation-iteration-count: unset;
+}
+
+.CharacterContainer:after {
+  content: "";
+  background-image: url("https://res.cloudinary.com/muhammederdem/image/upload/q_60/v1536405218/starwars/item-3.webp");
+  display: inline-block;
+
+  width: 600px;
+  height: 800px;
+
+  position: absolute;
+  bottom: 20%;
+  right: 50%;
+
+  margin-bottom: 150px;
+  margin-right: -350px;
+  border-radius: 40px;
+  z-index: 6;
+
+
+  animation-name: animate-element2;
+  animation-duration: 1.5s;
+  animation-iteration-count: unset;
+}
+
+.informationContainer:after {
+  content: "";
+  display: inline-block;
+  width: 1px;
+  height: 100%;
+  background: rgba(123, 133, 139, 64%);
+
+  position: absolute;
+  top: 32px;
+  right: -32px;
+}
+
+
+
+
+/*Animations*/
+
+@keyframes animate-element {
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg);}
+}
+
+@keyframes animate-element4 {
+  0% {
+    opacity: 0;
+    -webkit-transform: scale3d(.3, .3, .3);
+    transform: scale3d(.3, .3, .3);
   }
-  to {
-    transform: rotate(360deg);
+  50% {
+    opacity: 1;
+  }
+}
+
+@keyframes CharacterContainer {
+  0% {
+    transform: scale(.5);
+    transform-origin: 50% 100%;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 50% 100%;
+  }
+}
+
+@keyframes animate-element3 {
+  0% {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes animate-element2 {
+  0% {
+    transform: scale(.5);
+    transform-origin: 50% 100%;
+  }
+  100% {
+    transform: scale(1);
+    transform-origin: 50% 100%;
   }
 }
